test/conformance/chainsaw/mutate/refactor/foreach/remove-and-add/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    env:
    - name: ENV_ONE
      value: "one"
    - name: ENV_TWO
      value: "two"
